--- a/Image Slider/index.html
+++ b/Image Slider/index.html
@@ -7,7 +7,90 @@
 </head>
  <link rel="stylesheet" href="style.css">
 <body>
-    
+
+    <header>
+        <nav>
+            <a href="#" class="active">Home</a>
+            <a href="#">About</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Services</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
+    <div class="slider">
+
+        <div class="list">
+            <div class="item">
+                <img src="./assets/tajmahal.jpg" alt="" srcset="">
+                <div class="content">
+                    <div class="title">Taj Mahal</div>
+                    <div class="type">Agra</div>
+                    <div class="description">The Taj Mahal is an ivory-white marble mausoleum on the south bank of the Yamuna river in the Indian city of Agra. It was commissioned in 1632 by the Mughal emperor, Shah Jahan (reigned from 1628 to 1658), to house the tomb of his favourite wife, Mumtaz Mahal.</div>
+                    <div class="button">
+                        <button>SEE MORE</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="item">
+                <img src="./assets/victoriamemo.jpg" alt="" srcset="">
+                <div class="content">
+                    <div class="title">Victoria Memorial</div>
+                    <div class="type">Kolkata</div>
+                    <div class="description">The Victoria Memorial is a large marble monument on the Maidan in Central Kolkata, having its entrance on the Queen's Way. It was built between 1906 and 1921 by the British Raj. It is dedicated to the memory of Queen Victoria, the Empress of India from 1876 to 1901.</div>
+                    <div class="button">
+                        <button>SEE MORE</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="item">
+                <img src="./assets/redfort.jpg" alt="" srcset="">
+                <div class="content">
+                    <div class="title">Red Fort</div>
+                    <div class="type">Delhi</div>
+                    <div class="description">A symbol of power and beauty, the Red Fort was the heart of Shahjahanabad (present-day Old Delhi), the bustling new capital built by Mughal emperor Shah Jahan.</div>
+                    <div class="button">
+                        <button>SEE MORE</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="item">
+                <img src="./assets/goldentemple.jpg" alt="" srcset="">
+                <div class="content">
+                    <div class="title">Golden Temple</div>
+                    <div class="type">Amritsar</div>
+                    <div class="description">The Golden Temple Amritsar India (Sri Darbar Sahib Amritsar) is not only a central religious place of the Sikhs, but also a symbol of human brotherhood and equality. Everybody, irrespective of cast, creed or race can seek spiritual solace and religious fulfilment without any hindrance.</div>
+                    <div class="button">
+                        <button>SEE MORE</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="thumbnail">
+            <div class="item">
+                <img src="./assets/tajmahal.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img src="./assets/victoriamemo.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img src="./assets/redfort.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img src="./assets/goldentemple.jpg" alt="" srcset="">
+            </div>
+        </div>
+
+        <div class="nextprevArrow">
+
+        </div>
+    </div>
+
+
+    <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
