--- a/Image Slider/index.html
+++ b/Image Slider/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Slider</title>
+    
+    <link rel="stylesheet" href="style.css">
 </head>
- <link rel="stylesheet" href="style.css">
 <body>
-
+        <!-- Navigation Bar -->
     <header>
         <nav>
             <a href="#" class="active">Home</a>
@@ -17,6 +18,8 @@
             <a href="#">Contact</a>
         </nav>
     </header>
+
+    <!-- Content -->
     <div class="slider">
 
         <div class="list">
@@ -69,7 +72,7 @@
             </div>
 
         </div>
-
+           <!-- Next Thumbnails -->
         <div class="thumbnail">
             <div class="item">
                 <img src="./assets/tajmahal.jpg" alt="" srcset="">
@@ -84,9 +87,10 @@
                 <img src="./assets/goldentemple.jpg" alt="" srcset="">
             </div>
         </div>
-
+           <!-- Next And Previous Button -->
         <div class="nextprevArrow">
-
+            <button class="prev"><</button>
+            <button class="next">></button>
         </div>
     </div>
 
