seem more overlap

--- a/Image Slider/index.html
+++ b/Image Slider/index.html
@@ -88,7 +88,7 @@
             </div>
         </div>
            <!-- Next And Previous Button -->
-        <div class="nextprevArrow">
+        <div class="nextPrevArrows">
             <button class="prev"><</button>
             <button class="next">></button>
         </div>
